# f16SimPit

./: capturemodule.h  mainwindow.cpp
DED_UFC/dedBoard/: dedBoard-cache.lib  dedBoard.kicad_pcb-bak  dedBoard.net  dedBoard.sch  fp-info-cache
DED_UFC/dedProgram/: DEDLCD.ino  dedProgram.ino
LightBurnFile/centerConsole/: Thumbs.db  centerConsole_overlay.lbrn  leftEyebrow.lbrn  left_mfd_Panel_rev3.lbrn  rightMfdCutouts.lbrn  topGauges.lbrn
LightBurnFile/ded_ufc/: DED_UFC_V3.lbrn  OLED_DED_BOX.lbrn
LightBurnFile/gauges/: Thumbs.db  engineGaugeCluster.lbrn  engineGaugeCluster_backup.lbrn2  epuGauge.lbrn  fuelGauge.lbrn
LightBurnFile/misc/: PartsLibraryTemplate.lbrn  SideLettering.lbrn  instrumPanelsToCutter.lbrn  instrumpanelLeft.lbrn  mapstorage.lbrn  throttleStopPlate_v3.lbrn
LightBurnFile/panels/: Thumbs.db  aoa_nws.lbrn2  ecm_panels.lbrn  ecm_panels_v2.lbrn  enginePanels.lbrn  flt_control.lbrn  iff_lights.lbrn  landgGear.lbrn  oxygenPanel_V2.lbrn  rightConsole1.lbrn  rightConsole2.lbrn  tast_panel.lbrn  tast_panel_backup.lbrn2  threatWarningAux.lbrn  throttleArmPlates.lbrn  uhfPanel.lbrn  voice_and_consentPanel.lbrn  warningIndicatorPanel_rev1.lbrn
ecm/: ecm_panels_v2.lbrn
panelsCode/UHF/: UHF.pptx
panelsCode/cmds_landing_ecm/: Presentation.pptx
panelsCode/ded/: DED_and_ICP.pptx
panelsCode/fltCtrl_Test/: flightCtrl_test.pptx
panelsCode/iff_ExtLight/: IFF_Lights.pptx
panelsCode/o2_andAvionicsPower/: o2_andAvionicsPower.ino  rightConsole_avionicsPwrPanel.lbrn
panelsCode/power_hutlight/: power_hutlight.ino  pwr_hud_light_ac_panel.pptx  pwr_hud_light_ac_panel_v2.pptx
panelsCode/throttlePAnels/: engine_panels.pptx
panelsCode/warning_and_gauges/: Thumbs.db
screenClone/: CMakeLists.txt  capturemodule.cpp
throttleArm/: FingerLEver.stl  InterfacePlate.stl  lockPin.stl  throttleArm.lbrn  wiring.pptx
throttleArm/cougarThrottle_externalCutOff/: cougarThrottle_externalCutOff.ino
(+52 files in other folders)
